src/test/resources/validation/error/resolverReturningInterfaceIllegalArguments/schema.graphqls
type Kull implements Node @table {
  id: ID!
  navn: String! @column(name : "STUDIEKULLNAVN")
  referertNode: Node @splitQuery
}

interface Node {
  id: ID!
}

type ProgramStudierett implements Node @table(name : "STUDIERETT") {
  id: ID!
  navn: String!
}

type Query {
  kull(navn: String!): Kull
}
